--- a/Predicting temperature of earth surface based on annual co2 emission.ipynb
+++ b/Predicting temperature of earth surface based on annual co2 emission.ipynb
@@ -5,8 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Data analitics project\n",
-    "### Predicting temperature of earth surface based on annual co2 emission\n",
+    "# About problem\n",
     "\n",
     "The project goal is to predict change of the temperature of Earth surface based on emission of co2. Model could be used to predict the temperature of Earth surface based on the emission of annual co2 emission.\n",
     "\n",
@@ -72,7 +71,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Data preprocessing"
+    "# Data preprocessing"
    ]
   },
   {
@@ -266,9 +265,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Model specification\n",
+    "# Model specification\n",
     "In this project I created 2 models using library for python that let me create models in stan language\n",
-    "#### Model1 specification\n",
+    "\n",
+    "## First model specification\n",
+    "\n",
     "The model use normal distribution to pick parameter alpha, which is equal to temperature of earth surface if there where no increase of co2 emission. Gamma distribution was used to pick parameter beta, which specify how temperature increase depends on emission of co2. I decided to use gamma distribution, beacouse it can contain only positive values, which was the behavior I wanted for parameter beta, beacosue when I analyzed data it I found out that increase of co2 can only make temperature go up. I use linear regresion to model the dependency of temperature from co2 emission, which is passed to mu parameter in normal distribution. For model creation we require data about annual co2 production and annual temperature of surface."
    ]
   },
@@ -330,7 +331,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Model2 specification\n",
+    "## Second model specification\n",
     "The second model is mostly like first model, but I decided to use student distribution to pick parameter alpha. The reasoning behind that is that some values of temperature for low values of co2 production and temperatures without impact of co2 production had wide spread values of temperature. For this case student distribution should work better."
    ]
   },
@@ -394,7 +395,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Priors"
+    "# Priors"
    ]
   },
   {
@@ -689,7 +690,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Posterior analyzys model 1"
+    "# Posterior analyzys model 1"
    ]
   },
   {
@@ -888,7 +889,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Posterior analysis model 2"
+    "# Posterior analysis model 2"
    ]
   },
   {
@@ -1086,7 +1087,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Model comparison"
+    "# Model comparison"
    ]
   },
   {
@@ -4467,7 +4468,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### WAIC results\n",
+    "## WAIC results\n",
     "WAIC is measure of model fit that compare balance between goodness of models and model complexity. For this indicator model1 was considered better, which was expected, because adding more complexity to second model didn't really change a lot. Higher weight for first model indicate that it is better at extracting information from data.\n",
     "\n",
     "Calculated values for WAIC, are most likely reliable, beacouse there where no errors during calculations."
@@ -4587,7 +4588,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### LOO results\n",
+    "## LOO results\n",
     "LOO is indicator that is based on predictive accuracy of the model. For this indicator model1 was considered better, which isn't great information, because I wanted second model to be better. Extending ranges for parameter alpha to include distant measures was bad idea, beacouse as we can see it reduced model predictive accurasy, which I should have predicted from analyzing plot for distribution of values and data points. From indicators I can also say that weight of model1 is really high which determine that it's best.\n",
     "\n",
     "Calculated values for LOO, are most likely reliable, beacouse there where no errors during calculations."
@@ -4707,7 +4708,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Finall model comparison\n",
+    "## Finall model comparison\n",
     "First model is superior to second in every aspect compared above. The only thig it does better is predicting values for low emission of co2, but for every other case it's performe worse and is less effective. Indicators of LOO and WAIC can be trusted, because there where no errors and after anylyzing models I can come to the same conclusions as these indicators.\n",
     "\n",
     "As for what can be done to improve model. I think that adding some predictors which are not based on emission, but some natural factors like rinfall or other changes which can cause temperature to be lower on higher in year."
